--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,7 +82,7 @@ jobs:
         uses: m00nyONE/esoui-upload@v1
         with:
           api_key: ${{ secrets.ESOUI_API_KEY }}
-          addon_id: '9999999999'
+          addon_id: '4155'
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME }}
           changelog_file: 'CHANGELOG.md'
