--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -79,3 +79,13 @@ jobs:
           makeLatest: true
           prerelease: true
           updateOnlyUnreleased: true
+
+      - name: Test Upload to ESOUI
+        uses: m00nyONE/esoui-upload@v1
+        with:
+          api_key: ${{ secrets.ESOUI_API_KEY }}
+          addon_id: '-'
+          version: ${{ env.ADDON_VERSION }}
+          zip_file: ${{ env.ZIP_FULL_NAME }}
+          changelog_file: 'CHANGELOG.md'
+          test: true
