--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -35,7 +35,6 @@ jobs:
           echo "ADDON_VERSION=$version" >> $GITHUB_ENV
           
           echo "ZIP_FULL_NAME=${addon_name}-${version}.zip" >> $GITHUB_ENV
-          echo "ZIP_LITE_NAME=${addon_name}-${version}-lite.zip" >> $GITHUB_ENV
 
       - name: Replace placeholders with current date
         run: |
@@ -84,7 +83,7 @@ jobs:
         uses: m00nyONE/esoui-upload@v1.1.0
         with:
           api_key: ${{ secrets.ESOUI_API_KEY }}
-          addon_id: '-'
+          addon_id: '4155'
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME }}
           changelog_file: 'CHANGELOG.md'
