--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -83,7 +83,7 @@ jobs:
         uses: m00nyONE/esoui-upload@v2
         with:
           api_key: ${{ secrets.ESOUI_API_KEY }}
-          addon_id: '-'
+          addon_id: '4155'
           version: ${{ env.ADDON_VERSION }}
           zip_file: ${{ env.ZIP_FULL_NAME }}
           changelog_file: 'CHANGELOG.md'
