--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -9,10 +9,13 @@ on:
       - main
 
 jobs:
+  test:
+    uses: ./.github/workflows/_tests.yml
   release:
     name: "dev release"
     runs-on: ubuntu-latest
     permissions: write-all
+    needs: [ 'test' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
