--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,10 +9,13 @@ on:
       - release # to be changed to main with schedule
 
 jobs:
+  test:
+    uses: ./.github/workflows/_tests.yml
   release:
     name: "release"
     runs-on: ubuntu-latest
     permissions: write-all
+    needs: [ 'test' ]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
