--- a/.github/workflows/_tests.yml
+++ b/.github/workflows/_tests.yml
@@ -2,7 +2,7 @@ name: Tests
 on:
   workflow_call:
 jobs:
-  check-for-missing-includes:
+  missing-includes:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -10,7 +10,7 @@ jobs:
       - name: Check for missing includes in LibCustomIcons.addon
         run: |
           python3 .github/scripts/check-includes.py
-  check-for-duplicates:
+  duplicates:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
