add color validation test

--- a/.github/workflows/_tests.yml
+++ b/.github/workflows/_tests.yml
@@ -18,3 +18,11 @@ jobs:
       - name: Check for duplicate definitions
         run: |
           python3 .github/scripts/check-duplicates.py
+  color-formatting:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Check for correct formatting of colored name strings
+        run: |
+          python3 .github/scripts/check-color-formatting.py
