--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,8 +24,19 @@ jobs:
         id: check_changes
         run: |
           echo "🔍 Checking for changes since the last release..."
-          LAST_RELEASE_TAG=$(curl --silent "https://api.github.com/repos/{{ github.repository }}/releases/latest" | jq -r .tag_name)
-          echo $LAST_RELEASE_TAG
+          REPO="$GITHUB_REPOSITORY"
+          LAST_RELEASE_TAG=$(curl --silent "https://api.github.com/repos/${REPO}/releases/latest" | jq -r .tag_name)
+          
+          if [ -z "$LAST_RELEASE_TAG" ] || [ "$LAST_RELEASE_TAG" = "null" ]; then
+            echo "⚠️ No previous release found, proceeding with release."
+            echo "should_release=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+      
+          echo "Last release tag: $LAST_RELEASE_TAG"
+          
+          CHANGED=$(git fetch --tags && git diff --name-only "$LAST_RELEASE_TAG"..HEAD | grep -E '\.(lua|txt|md|xml|addon)$' || true)
+          echo "$CHANGED"
 #
 #
 #      - name: Get current year, month and day
