--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,7 @@ jobs:
           fi
       
           echo "Last release tag: $LAST_RELEASE_TAG"
+          echo ""
           
           CHANGED=$(git fetch --tags && git diff --name-only "$LAST_RELEASE_TAG"..HEAD | grep -E '\.(lua|txt|md|xml|addon)$' || true)
           echo "$CHANGED"
