--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,57 +38,72 @@ jobs:
           echo "Last release tag: $LAST_RELEASE_TAG"
           
           git fetch --quiet --tags
-          CHANGED=$(git diff --name-only "$LAST_RELEASE_TAG" HEAD || true)
-          echo "$CHANGED"
-#
-#
-#      - name: Get current year, month and day
-#        run: |
-#          echo "BUILD_DATE_YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
-#          echo "BUILD_DATE_MONTH=$(date -u +'%m')" >> $GITHUB_ENV
-#          echo "BUILD_DATE_DAY=$(date -u +'%d')" >> $GITHUB_ENV
-#          echo "BUILD_DATE_NUMBER=$(date +'%Y%m%d')" >> $GITHUB_ENV
-#          echo "BUILD_DATE_WITH_DOT=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
-#          echo "BUILD_DATE_WITH_HYPHEN=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-#
-#      - name: Create env variables
-#        run: |
-#          addon_name="LibCustomNames"
-#          version="${{ env.BUILD_DATE_WITH_HYPHEN }}"
-#
-#          echo "ADDON_NAME=$addon_name" >> $GITHUB_ENV
-#          echo "ADDON_VERSION=$version" >> $GITHUB_ENV
-#
-#          echo "ZIP_FULL_NAME=${addon_name}-${version}.zip" >> $GITHUB_ENV
-#
-#      - name: Replace placeholders with current date
-#        run: |
-#          sed -i "s/version = \"dev\"/version = \"${{ env.ADDON_VERSION }}\"/g" ${{ env.ADDON_NAME }}.lua
-#          sed -i "s/## Version: dev/## Version: ${{ env.ADDON_VERSION }}/g" ${{ env.ADDON_NAME }}.addon
-#          sed -i "s/## AddOnVersion: 99999999/## AddOnVersion: ${{ env.BUILD_DATE_NUMBER }}/g" ${{ env.ADDON_NAME }}.addon
-#
-#      - name: Create ZIP archive
-#        run: |
-#          REPO_FOLDER=$(pwd)
-#          TMP_FOLDER="/tmp/${{ env.ADDON_NAME }}"
-#
-#          # Define the path to the ignore pattern file
-#          ignore_file=".build-ignore"
-#
-#          # Read and process ignore patterns into a single line
-#          exclude_patterns=$(cat "$ignore_file" | awk '{print "--exclude " $0}' | tr '\n' ' ')
-#
-#          # Make folder and copy content
-#          mkdir -p $TMP_FOLDER
-#          rsync -a --quiet $exclude_patterns "$REPO_FOLDER/" "$TMP_FOLDER/"
-#
-#          # create zip
-#          (cd /tmp && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME }}" "${{ env.ADDON_NAME }}")
-#
-#      - name: Extract latest changelog entry
-#        run: |
-#          awk '/^## / { if (!found) { found=1; print; next } else { exit } } found' CHANGELOG.md > latest_changes.md
-#          cat latest_changes.md
+          CHANGED=$(git diff --name-only "$LAST_RELEASE_TAG" HEAD | grep -E '\.(lua|txt|md|xml|addon|dds)$' || true)
+          
+          if [ -z "$CHANGED" ]; then
+            echo "✅ No relevant file changes since $LAST_RELEASE_TAG."
+            #echo "should_release=false" >> $GITHUB_OUTPUT
+          else
+            echo "✅ Changes detected:"
+            echo "$CHANGED"
+            #echo "should_release=true" >> $GITHUB_OUTPUT
+          fi
+          
+          echo "should_release=false" >> $GITHUB_OUTPUT
+
+      - name: Cancel if no changes found
+        if: steps.check_changes.outputs.should_release == 'false'
+        run: |
+          echo "🛑 Skipping release because no relevant changes were found."
+          exit 0
+
+      - name: Get current year, month and day
+        run: |
+          echo "BUILD_DATE_YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
+          echo "BUILD_DATE_MONTH=$(date -u +'%m')" >> $GITHUB_ENV
+          echo "BUILD_DATE_DAY=$(date -u +'%d')" >> $GITHUB_ENV
+          echo "BUILD_DATE_NUMBER=$(date +'%Y%m%d')" >> $GITHUB_ENV
+          echo "BUILD_DATE_WITH_DOT=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
+          echo "BUILD_DATE_WITH_HYPHEN=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      - name: Create env variables
+        run: |
+          addon_name="LibCustomNames"
+          version="${{ env.BUILD_DATE_WITH_HYPHEN }}"
+
+          echo "ADDON_NAME=$addon_name" >> $GITHUB_ENV
+          echo "ADDON_VERSION=$version" >> $GITHUB_ENV
+
+          echo "ZIP_FULL_NAME=${addon_name}-${version}.zip" >> $GITHUB_ENV
+
+      - name: Replace placeholders with current date
+        run: |
+          sed -i "s/version = \"dev\"/version = \"${{ env.ADDON_VERSION }}\"/g" ${{ env.ADDON_NAME }}.lua
+          sed -i "s/## Version: dev/## Version: ${{ env.ADDON_VERSION }}/g" ${{ env.ADDON_NAME }}.addon
+          sed -i "s/## AddOnVersion: 99999999/## AddOnVersion: ${{ env.BUILD_DATE_NUMBER }}/g" ${{ env.ADDON_NAME }}.addon
+
+      - name: Create ZIP archive
+        run: |
+          REPO_FOLDER=$(pwd)
+          TMP_FOLDER="/tmp/${{ env.ADDON_NAME }}"
+
+          # Define the path to the ignore pattern file
+          ignore_file=".build-ignore"
+
+          # Read and process ignore patterns into a single line
+          exclude_patterns=$(cat "$ignore_file" | awk '{print "--exclude " $0}' | tr '\n' ' ')
+
+          # Make folder and copy content
+          mkdir -p $TMP_FOLDER
+          rsync -a --quiet $exclude_patterns "$REPO_FOLDER/" "$TMP_FOLDER/"
+
+          # create zip
+          (cd /tmp && zip -r --quiet "$REPO_FOLDER/${{ env.ZIP_FULL_NAME }}" "${{ env.ADDON_NAME }}")
+
+      - name: Extract latest changelog entry
+        run: |
+          awk '/^## / { if (!found) { found=1; print; next } else { exit } } found' CHANGELOG.md > latest_changes.md
+          cat latest_changes.md
 #
 #      - name: Create GitHub Release
 #        uses: ncipollo/release-action@v1
