enable real release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -122,13 +122,13 @@ jobs:
           zip_file: ${{ env.ZIP_FULL_NAME }}
           changelog_file: 'CHANGELOG.md'
           test: true
-#
-#      - name: Upload to ESOUI
-#        uses: m00nyONE/esoui-upload@v2
-#        if: steps.check_changes.outputs.should_release == 'true'
-#        with:
-#          api_key: ${{ secrets.ESOUI_API_KEY }}
-#          addon_id: '4155'
-#          version: ${{ env.ADDON_VERSION }}
-#          zip_file: ${{ env.ZIP_FULL_NAME }}
-#          changelog_file: 'CHANGELOG.md'
+
+      - name: Upload to ESOUI
+        uses: m00nyONE/esoui-upload@v2
+        if: steps.check_changes.outputs.should_release == 'true'
+        with:
+          api_key: ${{ secrets.ESOUI_API_KEY }}
+          addon_id: '4155'
+          version: ${{ env.ADDON_VERSION }}
+          zip_file: ${{ env.ZIP_FULL_NAME }}
+          changelog_file: 'CHANGELOG.md'
