--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -9,6 +9,7 @@ jobs:
   test:
     uses: ./.github/workflows/_tests.yml
   release:
+    if: github.repository_owner == 'm00nyONE'
     name: "dev release"
     runs-on: ubuntu-latest
     permissions: write-all
