tag latest on dev release

--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -71,7 +71,7 @@ jobs:
         with:
           name: "latest"
           commit: ${{ github.ref }}
-          tag: "${{ env.ADDON_VERSION }}"
+          tag: "latest"
           artifacts: "${{ env.ZIP_FULL_NAME }}"
           artifactContentType: application/zip
           bodyFile: latest_changes.md
