only generate docs when releasing

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,11 @@ jobs:
   test:
     if: github.repository_owner == 'm00nyONE'
     uses: ./.github/workflows/_tests.yml
+  docs:
+    if: github.repository_owner == 'm00nyONE'
+    uses: ./.github/workflows/_generate-docs.yml
+    permissions:
+      contents: write
   release:
     if: github.repository_owner == 'm00nyONE'
     name: "release"
